Enhance index.html with SEO meta tags
Added meta tags for SEO and improved content structure.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Shib Sankar Debnath</title>
+<meta name="title" content="Shib Sankar Debnath" />
+<meta name="description" content="Video Editor & Producer | Music Producer" />
 
 <!-- Cursive font for ALL text -->
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400&display=swap" rel="stylesheet">
@@ -349,3 +351,4 @@ volumeSlider.addEventListener("input",e=>{
 
 </body>
 </html>
+
