Add favicon and refine HTML structure
Added a favicon and improved HTML structure.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Shib Sankar Debnath</title>
 <meta name="title" content="Shib Sankar Debnath" />
 <meta name="description" content="Video Editor & Producer | Music Producer" />
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 <!-- Cursive font for ALL text -->
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400&display=swap" rel="stylesheet">
@@ -351,4 +352,5 @@ volumeSlider.addEventListener("input",e=>{
 
 </body>
 </html>
+
 
