Add Open Graph meta tags to index.html
Added Open Graph meta tags for better social sharing.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <meta name="description" content="Video Editor & Producer | Music Producer" />
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://shibsd.dev" />
+<meta property="og:title" content="Shib Sankar Debnath" />
+<meta property="og:description" content="Video Editor & Producer | Music Producer" />
+<meta property="og:image" content="https://shibsd.dev/Screenshot 2026-01-09 145619.png" />
+
 <!-- Cursive font for ALL text -->
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400&display=swap" rel="stylesheet">
 
@@ -352,5 +358,6 @@ volumeSlider.addEventListener("input",e=>{
 
 </body>
 </html>
+
 
 
