Refactor index.html with updated content and styles
Updated the HTML structure and styles for the webpage, including changes to meta tags, audio controls, and visual elements.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://shibsd.dev" />
 <meta property="og:title" content="Shib Sankar Debnath" />
 <meta property="og:description" content="Video Editor & Producer | Music Producer" />
-<meta property="og:image" content="https://shibsd.dev/Screenshot 2026-01-09 145619.png" />
+<meta property="og:image" content="https://shibsd.dev/web.png" />
 
 <!-- Cursive font for ALL text -->
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400&display=swap" rel="stylesheet">
@@ -358,6 +358,7 @@ volumeSlider.addEventListener("input",e=>{
 
 </body>
 </html>
+
 
 
 
