--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <meta property="og:title" content="Shib Sankar Debnath" />
 <meta property="og:description" content="Video Editor & Producer | Music Producer" />
 <meta property="og:image" content="https://shibsd.dev/web.png" />
+<meta property="og:image:width" content="1920" />
+<meta property="og:image:height" content="920" />
 
 <!-- Cursive font for ALL text -->
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400&display=swap" rel="stylesheet">
@@ -358,6 +360,7 @@ volumeSlider.addEventListener("input",e=>{
 
 </body>
 </html>
+
 
 
 
