--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://shibsd.dev" />
 <meta property="og:title" content="Shib Sankar Debnath" />
 <meta property="og:description" content="Video Editor & Producer | Music Producer" />
-<meta property="og:image" content="https://shibsd.dev/Screenshot 2026-01-09 145619.png" />
+<meta property="og:image" content="https://shibsd.dev/web.png" />
 <meta property="og:image:width" content="1920" />
 <meta property="og:image:height" content="920" />
 
@@ -360,6 +360,7 @@ volumeSlider.addEventListener("input",e=>{
 
 </body>
 </html>
+
 
 
 
