--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://shibsd.dev" />
 <meta property="og:title" content="Shib Sankar Debnath" />
-<meta property="og:description" content="Video Editor & Producer | Music Producer" />
+<meta property="og:site_name" content="Shib Sankar Debnath" />
+<meta property="og:description" content="Portfolio of Video Editor & Music Producer Shib Sankar Debnath." />
 <meta property="og:image" content="https://shibsd.dev/web.png" />
 <meta property="og:image:width" content="1920" />
 <meta property="og:image:height" content="920" />
-
+<meta property="og:image:alt" content="Shib Sankar Debnath"/>
+    
 <!-- Cursive font for ALL text -->
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400&display=swap" rel="stylesheet">
 
@@ -360,6 +362,7 @@ volumeSlider.addEventListener("input",e=>{
 
 </body>
 </html>
+
 
 
 
