--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 <meta property="og:image:width" content="1920" />
 <meta property="og:image:height" content="920" />
 <meta property="og:image:alt" content="Shib Sankar Debnath"/>
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Shib Sankar Debnath" />
+<meta name="twitter:description" content="Portfolio of Video Editor & Music Producer Shib Sankar Debnath." />
+<meta name="twitter:image" content="https://shibsd.dev/web.png" />
+<meta name="twitter:image:alt" content="Shib Sankar Debnath Portfolio" />
     
 <!-- Cursive font for ALL text -->
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400&display=swap" rel="stylesheet">
@@ -362,6 +368,7 @@ volumeSlider.addEventListener("input",e=>{
 
 </body>
 </html>
+
 
 
 
