Restore index.html with original content

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ p:hover{
 
     <div class="pic-wrap">
         <span class="overlay-text">Hello, I am</span>
-        <img src="Screenshot 2026-01-27 130020.png"
+        <img src="image (2).jpg"
              alt="Shib Sankar Debnath"
              class="profile-pic">
     </div>
@@ -368,6 +368,7 @@ volumeSlider.addEventListener("input",e=>{
 
 </body>
 </html>
+
 
 
 
