--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ p:hover{
 <body>
 
 <!-- ========= BACKGROUND MUSIC ========= -->
-<audio id="bgMusic" src="Night Pass.mp3" loop preload="auto"></audio>
+<audio id="bgMusic" src="BLOCK ME!" loop preload="auto"></audio>
 
 <!-- ========= STARS ========= -->
 <div class="stars">
@@ -368,6 +368,7 @@ volumeSlider.addEventListener("input",e=>{
 
 </body>
 </html>
+
 
 
 
